--- a/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.css
+++ b/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.css
@@ -4,8 +4,7 @@
 
 .attendees-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
+  grid-template-columns: max-content repeat(3, 1fr);
 }
 
 .header {
@@ -31,7 +30,7 @@
 }
 
 .header.name {
-  grid-column: 1 / 2;
+  grid-column: 2 / 3;
 }
 
 .column.options {
