--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -14,6 +14,18 @@
             (click)="removeCover()"></app-button>
         </div>
         <app-switch formControlName="publish" label="Publish" [defaultValue]="published"></app-switch>
+        <div class="edit-date-layout">
+            Начинается:
+            <span class="filler"></span>
+            <input type="date" formControlName="startsAtDate" [value]="startsAtDate" />
+            <input type="time" formControlName="startsAtTime" [value]="startsAtTime" />
+          </div>
+          <div class="edit-date-layout">
+            Заканчивается:
+            <span class="filler"></span>
+            <input type="date" formControlName="endsAtDate" [value]="endsAtDate" />
+            <input type="time" formControlName="endsAtTime" [value]="endsAtTime" />
+          </div>
         <app-submit class="input" value="Save" [enabled]="!uploading"></app-submit>
       </fieldset>
     </form>
