--- a/web/src/app/routes/event-page/event-page.component.css
+++ b/web/src/app/routes/event-page/event-page.component.css
@@ -1,5 +1,6 @@
 :host {
   width: 100%;
+  min-width: 750px;
 }
 .attendees {
   display: grid;
@@ -16,18 +17,14 @@
 }
 
 .header {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  grid-area: 1 / 1 / 2 / 3;
 }
 
 .buttons {
+  grid-area: 1 / 2 / 2 / 3;
   display: flex;
-  flex-direction: row;
-  align-self: center;
-  justify-self: end;
-  margin-right: 20px;
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  justify-content: center;
+  align-items: center;
 }
 
 .button {
@@ -87,7 +84,9 @@
   display: flex;
   flex-direction: row;
   margin-left: 100px;
+  margin-top: 100px;
   margin-right: 100px;
+  flex-shrink: 0;
 }
 
 .right > img {
@@ -123,6 +122,8 @@
 .right {
   flex: 1;
   margin-left: 10px;
+  flex-basis: 300px;
+  flex-shrink: 0;
 }
 
 .text {
