--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption');
+@import url('https://fonts.googleapis.com/css?family=Forum');
 
 * {
   margin: 0;
@@ -14,7 +15,7 @@ html,
 body {
   height: 100%;
   min-height: 100%;
-  font-family: 'PT Sans Caption';
+  font-family: 'Rubik';
 }
 
 body {
