Redesigned profile page

--- a/web/src/app/routes/user-page/components/user-events-table/user-events-table.component.html
+++ b/web/src/app/routes/user-page/components/user-events-table/user-events-table.component.html
@@ -1,5 +1,5 @@
 <div class="event-grid">
-  <div class="header" *ngIf="events.length">{{ title }}</div>
+  <div class="header">{{ title }}</div>
   <!-- <div class="header-name">Название турнира</div>
   <div class="header-date">Дата проведения</div> -->
   <ng-container *ngFor="let event of events; let i = index">
