--- a/web/src/app/components/popup/popup.component.html
+++ b/web/src/app/components/popup/popup.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [ngStyle]="containerStyle">
   <div class="title">
     <div class="header">{{ title }}</div>
     <app-close class="close-icon" (click)="handleClose($event)"></app-close>
