--- a/web/src/app/routes/user-page/user-page.component.html
+++ b/web/src/app/routes/user-page/user-page.component.html
@@ -2,28 +2,67 @@
   <div class="top-panel">
     <app-header class="header">{{ user.name }}</app-header>
     <div class="buttons">
-      <app-button class="button" *ngIf="currentUser" (click)="showEditPopup($event)" value="Edit"></app-button>
-      <app-button class="button" *ngIf="currentUser" (click)="handleLogout($event)" value="Logout"></app-button>
+      <app-button
+        class="button"
+        *ngIf="currentUser"
+        (click)="showEditPopup($event)"
+        value="Edit"
+      ></app-button>
+      <app-button
+        class="button"
+        *ngIf="currentUser"
+        (click)="handleLogout($event)"
+        value="Logout"
+      ></app-button>
     </div>
   </div>
 
-  <app-popup *ngIf="showEdit" title="Edit user" (close)="closeEditPopup($event)">
-    <form class="form" [formGroup]="editForm" (ngSubmit)="saveUser($event);">
+  <app-popup
+    *ngIf="showEdit"
+    title="Edit user"
+    (close)="closeEditPopup($event)"
+  >
+    <form class="form" [formGroup]="editForm" (ngSubmit)="saveUser($event)">
       <fieldset class="form-group">
-        <app-input class="input" formControlName="firstName" placeholder="Имя" defaultValue="{{user.firstName}}"></app-input>
-        <app-input class="input" formControlName="lastName" placeholder="Фамилия" defaultValue="{{user.lastName}}"></app-input>
-        <app-input class="input" formControlName="email" placeholder="Имейл" defaultValue="{{user.email}}"></app-input>
+        <app-input
+          class="input"
+          formControlName="firstName"
+          placeholder="Имя"
+          defaultValue="{{user.firstName}}"
+        ></app-input>
+        <app-input
+          class="input"
+          formControlName="lastName"
+          placeholder="Фамилия"
+          defaultValue="{{user.lastName}}"
+        ></app-input>
+        <app-input
+          class="input"
+          formControlName="email"
+          placeholder="Имейл"
+          defaultValue="{{user.email}}"
+        ></app-input>
         <app-submit class="input" value="Сохранить"></app-submit>
       </fieldset>
     </form>
   </app-popup>
 
-  <app-popup *ngIf="showEditTtw" title="Редактировать ттв" (close)="closeEditTtwPopup($event)">
+  <app-popup
+    *ngIf="showEditTtw"
+    title="Редактировать ттв"
+    (close)="closeEditTtwPopup($event)"
+  >
     <form class="form" [formGroup]="editTtwForm" (ngSubmit)="saveTtw($event)">
       <fieldset class="form-group">
         <label class="ttwLabel">
           <span>http://r.ttw.ru/players/?id=</span>
-          <app-input class="ttwInput" (input)="handleTtwUrl($event)" formControlName="ttwUrl" placeholder=""></app-input>
+          <app-input
+            class="ttwInput"
+            (input)="handleTtwUrl($event)"
+            formControlName="ttwUrl"
+            defaultValue="{{user.ttwId}}"
+            placeholder=""
+          ></app-input>
         </label>
         <app-submit class="input" value="Сохранить"></app-submit>
       </fieldset>
@@ -33,23 +72,37 @@
   <div class="user-content">
     <div class="info" *ngIf="!user.ttwId">
       <div>Профиль Ттв не прилинкован</div>
-      <div class="connectButton" (click)="showEditTtwPopup($event)">Связать</div>
+      <div class="connectButton" (click)="showEditTtwPopup($event)">
+        Связать
+      </div>
     </div>
     <div class="info ttw" *ngIf="user.ttwId">
       <div>Профиль на ттв</div>
-      <div class="ttwUrl"><a href="{{ttwLink}}">{{ttwLink}}</a></div>
+      <div class="ttwUrl">
+        <a href="{{ttwLink}}">{{ ttwLink }}</a>
+      </div>
     </div>
 
     <div class="info" *ngIf="user.ttwId">
       <div>Рейтинг:</div>
       <span class="rating">{{ user.rating }}</span>
-      <div class="connectButton" *ngIf="currentUser" (click)="showEditTtwPopup($event)">Обновить рейтинг</div>
+      <div
+        class="connectButton"
+        *ngIf="currentUser"
+        (click)="showEditTtwPopup($event)"
+      >
+        Обновить рейтинг
+      </div>
     </div>
     <div class="info" *ngIf="user.email">
-      <span>Email:</span>
-      <span class="email">{{ user.email }}</span>
+      <span>Email:</span> <span class="email">{{ user.email }}</span>
     </div>
 
-    <app-user-events-table class="events" *ngIf="events.length" [events]="events" title="Участвовал в турнирах"></app-user-events-table>
+    <app-user-events-table
+      class="events"
+      *ngIf="events.length"
+      [events]="events"
+      title="Участвовал в турнирах"
+    ></app-user-events-table>
   </div>
 </div>
