--- a/web/src/app/components/button/button.component.html
+++ b/web/src/app/components/button/button.component.html
@@ -1,4 +1,3 @@
-<a href="#" [class]="form" (click)="handleClick($event)">
-  <img [src]="'/assets/' + icon" *ngIf="icon" class="image" />
-  {{ value }}
+<a href="#" [class]="appearance" (click)="handleClick($event)">
+  <img [src]="'/assets/' + icon" *ngIf="icon" class="image" /> {{ value }}
 </a>
