--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -1,16 +1,34 @@
 <div class="container">
-  <input type='checkbox' id='form-switch'>
+  <input type="checkbox" id="form-switch" />
   <div class="sign-in">
     <div class="header">Log in</div>
     <app-close class="close-icon" (click)="handleClose($event)"></app-close>
-    <form class="form" [formGroup]="signInForm" (ngSubmit)="signIn($event);">
+    <form class="form" [formGroup]="signInForm" (ngSubmit)="signIn($event)">
       <fieldset class="form-group">
-        <app-input class="input" formControlName="email" placeholder="Email"></app-input>
-        <app-input class="input" formControlName="password" placeholder="Password"></app-input>
+        <app-input
+          class="input"
+          formControlName="email"
+          placeholder="Email"
+        ></app-input>
+        <app-input
+          class="input"
+          formControlName="password"
+          placeholder="Password"
+        ></app-input>
         <app-submit class="input" value="Log In"></app-submit>
-        <app-button form="primary" class="input" icon="vk.svg" value="Log in with VK" (click)="handleVkLogin()"></app-button>
+        <app-button
+          appearance="primary"
+          class="input"
+          icon="vk.svg"
+          value="Log in with VK"
+          (click)="handleVkLogin()"
+        ></app-button>
       </fieldset>
-      <div class="register-switch"><label for='form-switch'><span class="switch-text">Register</span></label></div>
+      <div class="register-switch">
+        <label for="form-switch"
+          ><span class="switch-text">Register</span></label
+        >
+      </div>
     </form>
   </div>
   <div class="register">
@@ -19,14 +37,28 @@
     <form class="form" [formGroup]="registerForm" (ngSubmit)="signUp($event)">
       <app-close class="close-icon" (click)="handleClose($event)"></app-close>
       <fieldset class="form-group">
-        <app-input class="input" formControlName="firstName" placeholder="First name"></app-input>
-        <app-input formControlName="lastName" placeholder="Second name"></app-input>
+        <app-input
+          class="input"
+          formControlName="firstName"
+          placeholder="First name"
+        ></app-input>
+        <app-input
+          formControlName="lastName"
+          placeholder="Second name"
+        ></app-input>
         <app-input formControlName="email" placeholder="Email"></app-input>
-        <app-input formControlName="password" type="password" placeholder="Password"></app-input>
+        <app-input
+          formControlName="password"
+          type="password"
+          placeholder="Password"
+        ></app-input>
         <app-submit class="input" value="Register"></app-submit>
       </fieldset>
-      <div class="register-switch"><label for='form-switch'><span class="switch-text">Already have account?</span></label></div>
+      <div class="register-switch">
+        <label for="form-switch"
+          ><span class="switch-text">Already have account?</span></label
+        >
+      </div>
     </form>
   </div>
-
 </div>
