--- a/web/src/app/routes/events-page/events-page.component.html
+++ b/web/src/app/routes/events-page/events-page.component.html
@@ -2,7 +2,7 @@
   <app-header class="header">Events</app-header>
   <app-button
     class="add-button"
-    (click)="showAddPopup()"
+    (press)="showAddPopup()"
     value="Add event"
   ></app-button>
 </div>
