--- a/web/src/app/components/button/button.component.css
+++ b/web/src/app/components/button/button.component.css
@@ -115,7 +115,8 @@ a.secondary:hover {
 }
 
 a.connect,
-a.dangerous {
+a.dangerous,
+a.positive {
   border-radius: 5px;
   padding: 8px 24px;
   font-size: 22px;
@@ -140,4 +141,13 @@ a.dangerous {
 
 a.dangerous:hover {
   background-color: #ff983c;
+}
+
+a.positive {
+  background-color: #9b59b6;
+  box-shadow: 0px 5px 0px 0px #82409d;
+}
+
+a.positive:hover {
+  background-color: #b573d0;
 }
