--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -21,7 +21,7 @@
           class="input"
           icon="vk.svg"
           value="Log in with VK"
-          (click)="handleVkLogin()"
+          (press)="handleVkLogin()"
         ></app-button>
       </fieldset>
       <div class="register-switch">
