--- a/web/src/app/routes/user-page/user-page.component.html
+++ b/web/src/app/routes/user-page/user-page.component.html
@@ -5,13 +5,13 @@
       <app-button
         class="button"
         *ngIf="currentUser"
-        (click)="showEditPopup($event)"
+        (press)="showEditPopup($event)"
         value="Edit"
       ></app-button>
       <app-button
         class="button"
         *ngIf="currentUser"
-        (click)="handleLogout($event)"
+        (press)="handleLogout($event)"
         value="Logout"
       ></app-button>
     </div>
@@ -72,9 +72,12 @@
   <div class="user-content">
     <div class="info" *ngIf="!user.ttwId">
       <div>Профиль Ттв не прилинкован</div>
-      <div class="connectButton" (click)="showEditTtwPopup($event)">
-        Связать
-      </div>
+      <app-button
+        appearance="connect"
+        *ngIf="currentUser"
+        (press)="showEditTtwPopup($event)"
+        value="Связать"
+      ></app-button>
     </div>
     <div class="info ttw" *ngIf="user.ttwId">
       <div>Профиль на ттв</div>
@@ -89,7 +92,7 @@
       <app-button
         appearance="connect"
         *ngIf="currentUser"
-        (click)="showEditTtwPopup($event)"
+        (press)="showEditTtwPopup($event)"
         value="Обновить рейтинг"
       ></app-button>
     </div>
